; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/extr_wmain.c_fgetws.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/extr_wmain.c_fgetws.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @fgetws(i32* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call i8* @GlobalAlloc(i32 %9, i32 0)
  store i8* %10, i8** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %14, label %13

13:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %25

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @fgets(i8* %15, i32 %16, i32* %17)
  %19 = load i8*, i8** %8, align 8
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @a2w(i8* %19, i32* %20)
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @GlobalFree(i8* %22)
  %24 = load i32*, i32** %5, align 8
  store i32* %24, i32** %4, align 8
  br label %25

25:                                               ; preds = %14, %13
  %26 = load i32*, i32** %4, align 8
  ret i32* %26
}

declare dso_local i8* @GlobalAlloc(i32, i32) #1

declare dso_local i32 @fgets(i8*, i32, i32*) #1

declare dso_local i32 @a2w(i8*, i32*) #1

declare dso_local i32 @GlobalFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
